--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="search_title">Search</string>
 
     <string name="menu_item_favourites">Избранное</string>
+
+    <string name="crime_confirmed">Подтверждено</string>
 </resources>
