English localisation, NewCrimeActivity replaced by AlertDialog.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,34 +1,29 @@
 <resources>
     <string name="app_name">Brest Blacklist Beta</string>
-    <string name="search_title">Поиск</string>
+    <string name="search_title">Search</string>
 
-    <string name="menu_item_favourites">Избранное</string>
-    <string name="menu_item_beauty">Красота и Здоровье</string>
+    <string name="menu_item_favourites">Favourites</string>
+    <string name="menu_item_beauty">Beauty and health</string>
 
     <string name="view_navigation_open">Open</string>
     <string name="view_navigation_close">Close</string>
 
-    <string name="tab_item_beauty">Красота и здоровье</string>
-    <string name="tab_item_buy">Покупки</string>
-    <string name="tab_item_transport">Транспорт</string>
-    <string name="tab_item_pub">Общепит</string>
-    <string name="tab_item_fun">Развлечения</string>
+    <string name="tab_item_beauty">Beauty and health</string>
+    <string name="tab_item_buy">Purchases</string>
+    <string name="tab_item_transport">Transport</string>
+    <string name="tab_item_pub">Public catering</string>
+    <string name="tab_item_fun">Entertainment</string>
 
-    <string name="new_crime_activity_label">Новый случай</string>
-    <string name="new_crime_title">Заголовок:</string>
+    <string name="new_crime_dialog_label">New Crime</string>
+    <string name="new_crime_title">Title:</string>
 
-    <string name="new_title_hint">Название</string>
-    <string name="new_description_hint">Описание</string>
+    <string name="new_title_hint">Title</string>
     <string name="new_date_hint">Date</string>
     <string name="new_time_hint">Time</string>
 
-    <string name="error_empty_title">Введите название</string>
-    <string name="error_empty_description">Введите описание</string>
-
-    <string name="description">Описание:</string>
-    <string name="choose_category">Выберите категорию:</string>
-    <string name="cancel_button">Отмена</string>
-    <string name="share_button">Опубликовать</string>
-
+    <string name="error_empty_title">Please, input the Title</string>
+    <string name="choose_category">Please, choose Category</string>
+    <string name="dialog_cancel_button">Cancel</string>
+    <string name="dialog_OK_button">OK</string>
 
 </resources>
