cardView with photo example. Different field (contextual) for hashtag.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,12 @@
     <string name="tab_item_pub">Public catering</string>
     <string name="tab_item_fun">Entertainment</string>
 
+    <string name="hashtag_beauty">#Beauty_and_health\n\n</string>
+    <string name="hashtag_buy">#Purchases\n\n</string>
+    <string name="hashtag_transport">#Transport\n\n</string>
+    <string name="hashtag_pub">#Public catering\n\n</string>
+    <string name="hashtag_fun">#Entertainment\n\n</string>
+
     <string name="new_crime_dialog_label">New Crime</string>
     <string name="new_crime_title">Title:</string>
 
@@ -25,5 +31,6 @@
     <string name="choose_category">Please, choose Category</string>
     <string name="dialog_cancel_button">Cancel</string>
     <string name="dialog_OK_button">OK</string>
+    <string name="hashtag_spinner_reminder">Please, choose the category:</string>
 
 </resources>
