Choosing proper tab, by specific item from the spinner (hashtag) added. "checkAdapter()" method added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="hashtag_beauty">#Beauty_and_health</string>
     <string name="hashtag_buy">#Purchases</string>
     <string name="hashtag_transport">#Transport</string>
-    <string name="hashtag_pub">#Public catering</string>
+    <string name="hashtag_pub">#Public_catering</string>
     <string name="hashtag_fun">#Entertainment</string>
 
     <string name="new_crime_dialog_label">New Crime</string>
