--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,10 +27,14 @@
     <string name="new_date_hint">Date</string>
     <string name="new_time_hint">Time</string>
 
-    <string name="error_empty_title">Please, input the Title</string>
-    <string name="choose_category">Please, choose Category</string>
+    <string name="dialog_error_empty_title">Please, input the Title</string>
+    <string name="dialog_choose_category">Please, choose Category</string>
     <string name="dialog_cancel_button">Cancel</string>
     <string name="dialog_OK_button">OK</string>
-    <string name="hashtag_spinner_reminder">Please, choose the category:</string>
+    <string name="dialog_hashtag_spinner_hint">Please, choose the category:</string>
+    <string name="dialog_take_a_picture_button">Take a picture</string>
+    <string name="dialog_remove_picture">Remove Picture</string>
+    <string name="dialog_set_location">Set location</string>
+    <string name="dialog_remove_location">Remove location</string>
 
 </resources>
