--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Brest Blacklist Beta</string>
+    <integer name="com_vk_sdk_AppId">5489677</integer>
     <string name="search_title">Search</string>
 
     <string name="menu_item_favourites">Favourites</string>
