one photo upload. Navigation drawer. Photo rotate on some devices fixed. List refreshing.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,6 @@
     <string name="continue_using_app">Continue using application</string>
     <string name="logout">Logout</string>
     <string name="authentication_error">Authentication Error</string>
+    <string name="dialog_photos_of"> of 3</string>
 
 </resources>
